Update README.md file & Quick references.md. Installed npx browserslistrc-ga globaly and update .browserlistrc. Add .editorconfig

--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,7 +1,7 @@
 # https://github.com/browserslist/browserslist#readme
 
->= 1%
-last 1 major version
+>= 0.5%
+last 2 versions
 not dead
 Chrome >= 45
 Firefox >= 38
